--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-numpy = "^2.1.3"
 matplotlib = "^3.9.3"
 pandas = "^2.2.3"
 python-binance = "^1.0.24"
@@ -17,6 +16,10 @@ requests = "^2.32.3"
 ipykernel = "^6.29.5"
 setuptools = "^75.6.0"
 scikit-learn = "^1.5.2"
+catboost = "^1.2.7"
+seaborn = "^0.13.2"
+torch = "^2.5.1"
+torchinfo = "^1.8.0"
 
 
 [build-system]
